Fix image stretching

--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -1,6 +1,6 @@
 .card-container {
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
     background-color: #333;
     color: #eee;
     border: 1px solid #666;
